# jujutsu-sublime-plugin

./: .gitattributes  .gitignore  CONTRIBUTING.md  Default.sublime-commands  Default.sublime-keymap  LICENCE  README.md  SublimeJJ.py  SublimeJJ.sublime-settings  messages.json  pyproject.toml  unittesting.json
.github/workflows/: tests.yml
commands/: __init__.py  base.py  quick_commands.py  split_command.py
core/: __init__.py  cache.py  diff_selection.py  formatting.py  jj_cli.py  repo.py
docs/: sublime-plugin-guide.md  testing-strategy.md
listeners/: __init__.py  file_events.py  split_events.py
messages/: 0.1.0.txt  0.2.0.txt  0.3.0.txt  install.txt
tests/: __init__.py  conftest.py  test_cache.py  test_cli_parsing.py  test_command_args.py  test_formatting.py  test_repo_manager.py  test_subprocess.py
views/: __init__.py  split_phantoms.py  split_selection.py  status_bar.py
