[project]
name = "sublimejj"
version = "0.1.0"
description = "Jujutsu (jj) integration for Sublime Text"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BlueOak-1.0.0" }
dependencies = [
    "pytest>=8.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
